[project]
name = "oracletrace"
version = "2.0.0"
description = "Detect Python performance regressions and compare execution traces with lightweight call graph visualization"
authors = [
    { name = "Kayk Caputo" },
    { name = "André Gustavo" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["rich"]

keywords = [
    "python profiler",
    "performance regression",
    "execution trace",
    "call graph",
    "performance comparison",
    "benchmark comparison",
    "trace analyzer",
    "python performance tool",
    "ci performance testing",
    "lightweight profiler"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

[project.scripts]
oracletrace = "oracletrace.cli:main"

[project.urls]
Homepage = "https://kaykcaputo.github.io/oracletrace/"
Repository = "https://github.com/KaykCaputo/oracletrace"
Documentation = "https://kaykcaputo.github.io/oracletrace/"
Issues = "https://github.com/KaykCaputo/oracletrace/issues"
